# etherx-taurus

./: .env.deploy.example  .gitignore  bump-version.sh  deploy-tauri.sh  package-lock.json  package.json  release-all.sh  update-github.sh
.github/workflows/: build.yml  release.yml
src/: browser.html  newtab.html  settings.html  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: adblocker.rs  browser.rs  database.rs  downloads.rs  mod.rs  passwords.rs  qrsync.rs  security.rs
src/assets/filters/: filters.txt  malware.txt
src/css/: browser.css
src/js/: browser.js
