[package]
name = "etherx-browser"
version = "2.4.133"
description = "EtherX Browser — Web3 Desktop Browser"
authors = ["EtherX Team <info@kriptoentuzijasti.io>"]
license = "SEE LICENSE IN LICENSE"
repository = "https://kriptoentuzijasti.io"
edition = "2021"

[lib]
name = "etherx_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "etherx-browser"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Crypto — password manager
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

# Ad blocker — supports EasyList/ABP filter format
adblock = "0.9"
# Pin rmp to compatible version for adblock 0.9 + rmp-serde 0.15
rmp = "=0.8.11"
rmp-serde = "=0.15.5"

# HTTP client (with rustls TLS 1.3)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }

# QR code generation
qrcode = "0.14"
image = "0.25"

# Open files/URLs with default system application
open = "5"

# URL parsing
url = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
